--- a/kodryan_graph_visualization.ipynb
+++ b/kodryan_graph_visualization.ipynb
@@ -730,11 +730,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"image.png\">"
+    "<img src=\"https://media.vlipsy.com/vlips/bM9OjBeW/preview.png\">"
    ]
   }
  ],
